0.8.0
*** Support to font files NFTR (only view)
* Fixed important errors in SDAT plugin

0.7.7
*** Interface to decompress FAT files (files with offsets)
** Improved SDAT plugin:
   - Information dialog about sound files
   - WAV -> SWAV
   - Create new SWAR
   - Fixed some bugs
* Improved decompress methods, now it's faster.
* Command to set a new transparent color in NCGR and NCER files
* Improved Images plugin and TGA support

0.7.6
*** Import images from NCER files
* Add support for the game TETRIS DS
* Fixed problems with No_Tiled images
* Support for the game LAYTON2 (*.arc, *.plz)
* Fixed problem with NCER files

0.7.5 (public release)
*** Improved the plugin of Nitro compression (DSDecmp proyect by Barubary)
*** Sound plugin added with SADL audio support
*** Added control to compress NARC files
*** Added control to compress Nitro compress format files
* Added support to japanese file names (it fixes the error opening some NDS games)
* Added control with options of new maps
* Added button in SDAT plugin to change files
* Fixed problem with the import (wav to strm) methods in SDAT plugin
* Improved the french translation
* Added import and export palettes files to Windows palettes
* Fixed problems saving new NCLR files
* Fixed minors problems

0.7.4 (public release):
*** Import BitMaP images and convert it to NCLR,NCGR,NSCR files
*** Header and banner editor
*** WAV to STRM converter
* Added option to save modified SDAT files
* New methods and functions in IPluginHost interface
* Added new file format in "Open As..." -> Extract FAT (files with offsets at the beggining)
* Added new file format in "Open As..." -> Text
* Fixed problem saving roms without arm9 overlay
* Improved french translation (by Vix33)
* Fixed problem with the priority in NCER files.
* Fixed minor problems.

0.7.3 (Contest release):
* Fixed problem with some SDAT and SWAV files
* Added option to open external files
* Added new format file: Script
* Multilenguage support to SDAT plugin.