@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 11.00
+# Visual Studio 2010
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "NotManagedNetPlugins", "NotManagedNetPlugins\NotManagedNetPlugins.csproj", "{22894330-4F5C-4C4A-AFAD-56586C9473CF}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Any CPU = Debug|Any CPU
+		Release|Any CPU = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{22894330-4F5C-4C4A-AFAD-56586C9473CF}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{22894330-4F5C-4C4A-AFAD-56586C9473CF}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{22894330-4F5C-4C4A-AFAD-56586C9473CF}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{22894330-4F5C-4C4A-AFAD-56586C9473CF}.Release|Any CPU.Build.0 = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
